--- a/root/task-3/flowbite_html_project/src/index_1.html
+++ b/root/task-3/flowbite_html_project/src/index_1.html
@@ -135,7 +135,7 @@
     <div class="-bg-[yellow] w-full h-fit mx-auto">
       <div class="relative w-full flex justify-center">
         <div
-          class="bg-[#FFF3CB] z-3  w514:absolute mt-[24px] w514:mt-0 w514:top-[24px] right-0 w-[418px] h-fit rounded-[8px] py-3 px-4 gap-3 flex flex-col">
+          class="bg-[#FFF3CB] z-3  w514:absolute mt-[24px] right-0 w-[418px] h-fit rounded-[8px] py-3 px-4 gap-3 flex flex-col">
           <div class="-bg-[red] w-full h-fit flex items-center justify-between">
             <div class="w-fit h-fit gap-3 flex items-center ">
               <div>
