--- a/root/task-3/flowbite_html_project/src/index_1.html
+++ b/root/task-3/flowbite_html_project/src/index_1.html
@@ -6,8 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Flowbite HTML Project</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-  <!-- <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" /> -->
-  <!-- <link href="./globals.css" rel="stylesheet"> -->
   <style type="text/tailwindcss">
     @theme inline{
       --breakpoint-w1140: 1140px;
@@ -749,7 +747,7 @@
                 xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M14.6668 4.66602L8.68683 8.46602C8.48101 8.59497 8.24304 8.66336 8.00016 8.66336C7.75728 8.66336 7.51931 8.59497 7.3135 8.46602L1.3335 4.66602M2.66683 2.66602H13.3335C14.0699 2.66602 14.6668 3.26297 14.6668 3.99935V11.9993C14.6668 12.7357 14.0699 13.3327 13.3335 13.3327H2.66683C1.93045 13.3327 1.3335 12.7357 1.3335 11.9993V3.99935C1.3335 3.26297 1.93045 2.66602 2.66683 2.66602Z"
-                  stroke="#470001" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                  stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
               </svg>
             </div>
           </button>
