--- a/root/task-3/flowbite_html_project/src/index_4.html
+++ b/root/task-3/flowbite_html_project/src/index_4.html
@@ -289,7 +289,7 @@
                 </div>
               </div>
               <div class="-bg-[red] w-fit h-fit flex flex-col gap-6">
-                <h1 class=" border border-white pb-2 font-medium leading-[150%] tracking-[-1%] text-black">
+                <h1 class=" border-b border-[#D9D9D9] pb-2 font-medium leading-[150%] tracking-[-1%] text-black">
                   KURIOs
                 </h1>
                 <div class="w-fit h-fit flex flex-col gap-2 text-black">
