--- a/root/task-3/flowbite_html_project/src/index_4.html
+++ b/root/task-3/flowbite_html_project/src/index_4.html
@@ -162,7 +162,6 @@
               </li>
             </ul>
           </div>
-
         </div>
       </div>
     </nav>
@@ -174,69 +173,7 @@
       <section class="-bg-[red] w-full h-fit flex flex-col items-center">
         <div class="w-full h-fit flex flex-col">
           <div class="-bg-[blue] w-full h-fit mt-[48px] relative flex gap-12 justify-between">
-            <div class="-bg-[green] w-fit h-fit">
-              <img class="w-" src="./user-photo2.png" alt="user photo">
-              <div class="-bg-[red] w-[312px] h-fit flex flex-col gap-6 mt-7">
-                <div class="-bg-[blue] w-full h-fit gap-2 justify-between flex items-center relative">
-                  <div class="w-fit h-fit gap-2 flex items-center">
-                    <a href=""
-                      class="w-fit h-fit rounded-full border border-[#CFD8C1] p-1.5 hover:bg-[#878F7A] flex items-center justify-center text-[#454545] hover:text-white z-3">
-                      <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g clip-path="url(#clip0_2492_6547)">
-                          <path
-                            d="M11.6668 4.3335H11.6735M4.66683 1.3335H11.3335C13.1744 1.3335 14.6668 2.82588 14.6668 4.66683V11.3335C14.6668 13.1744 13.1744 14.6668 11.3335 14.6668H4.66683C2.82588 14.6668 1.3335 13.1744 1.3335 11.3335V4.66683C1.3335 2.82588 2.82588 1.3335 4.66683 1.3335ZM10.6668 7.58016C10.7491 8.13499 10.6543 8.70164 10.396 9.19951C10.1377 9.69737 9.72893 10.1011 9.22791 10.3533C8.7269 10.6055 8.15913 10.6932 7.60535 10.6041C7.05158 10.515 6.54 10.2536 6.14339 9.85694C5.74677 9.46032 5.48532 8.94875 5.39621 8.39497C5.3071 7.8412 5.39487 7.27343 5.64705 6.77241C5.89922 6.2714 6.30295 5.86266 6.80082 5.60432C7.29868 5.34599 7.86533 5.25122 8.42016 5.3335C8.98611 5.41742 9.51006 5.68114 9.91462 6.0857C10.3192 6.49026 10.5829 7.01421 10.6668 7.58016Z"
-                            stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                        </g>
-                        <defs>
-                          <clipPath id="clip0_2492_6547">
-                            <rect width="16" height="16" fill="white" />
-                          </clipPath>
-                        </defs>
-                      </svg>
-                    </a>
-
-                    <a href=""
-                      class="w-fit h-fit rounded-full border border-[#CFD8C1] p-1.5 hover:bg-[#878F7A] flex items-center justify-center text-[#454545] hover:text-white z-3">
-                      <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                          d="M2.75 3.5322C2.75 3.17865 2.86825 2.88699 3.10473 2.6572C3.34121 2.4274 3.64865 2.3125 4.02703 2.3125C4.39865 2.3125 4.69932 2.42562 4.92905 2.65189C5.16554 2.88523 5.28378 3.18926 5.28378 3.56402C5.28378 3.90341 5.16892 4.18623 4.93919 4.4125C4.70271 4.64583 4.39189 4.7625 4.00676 4.7625H3.99662C3.625 4.7625 3.32433 4.64583 3.09459 4.4125C2.86486 4.17917 2.75 3.88573 2.75 3.5322ZM2.88176 12.8125V5.72765H5.13176V12.8125H2.88176ZM6.37838 12.8125H8.62838V8.85644C8.62838 8.60896 8.65541 8.41805 8.70946 8.28371C8.80405 8.0433 8.94763 7.84002 9.1402 7.67386C9.33277 7.5077 9.57432 7.42462 9.86486 7.42462C10.6216 7.42462 11 7.95846 11 9.02614V12.8125H13.25V8.75038C13.25 7.70391 13.0135 6.91023 12.5405 6.36932C12.0676 5.82841 11.4426 5.55795 10.6655 5.55795C9.79392 5.55795 9.11486 5.95038 8.62838 6.73523V6.75644H8.61824L8.62838 6.73523V5.72765H6.37838C6.39189 5.95391 6.39865 6.65744 6.39865 7.83826C6.39865 9.01906 6.39189 10.6771 6.37838 12.8125Z"
-                          fill="currentColor" />
-                      </svg>
-                    </a>
-                    <button data-modal-target="share-profile-modal" data-modal-toggle="share-profile-modal"
-                      class="cursor-pointer w-fit h-fit rounded-full border border-[#CFD8C1] p-1.5 hover:bg-[#878F7A] flex items-center justify-center text-[#454545] hover:text-white z-3">
-                      <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                          d="M5.22667 9.00634L9.78 11.6597M9.77333 4.33967L5.22667 6.99301M13.5 3.33301C13.5 4.43758 12.6046 5.33301 11.5 5.33301C10.3954 5.33301 9.5 4.43758 9.5 3.33301C9.5 2.22844 10.3954 1.33301 11.5 1.33301C12.6046 1.33301 13.5 2.22844 13.5 3.33301ZM5.5 7.99967C5.5 9.10424 4.60457 9.99967 3.5 9.99967C2.39543 9.99967 1.5 9.10424 1.5 7.99967C1.5 6.8951 2.39543 5.99967 3.5 5.99967C4.60457 5.99967 5.5 6.8951 5.5 7.99967ZM13.5 12.6663C13.5 13.7709 12.6046 14.6663 11.5 14.6663C10.3954 14.6663 9.5 13.7709 9.5 12.6663C9.5 11.5618 10.3954 10.6663 11.5 10.6663C12.6046 10.6663 13.5 11.5618 13.5 12.6663Z"
-                          stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                      </svg>
-                    </button>
-                  </div>
-                  <div class="-bg-[green] text-[#737373] w-fit h-fit gap-x-2 flex items-center">
-                    Connections:
-                    <div class=" text-black">
-                      28
-                    </div>
-                  </div>
-                </div>
-                <div class="w-full h-fit">
-                  <button id="mainConnectBtn" data-modal-target="connect-modal" data-modal-toggle="connect-modal"
-                    class="-bg-[red] cursor-pointer w-full h-fit rounded-[6px] border border-white py-3 px-8 bg-[#960D0D] text-white font-medium block">
-                    Connect
-                  </button>
-                  <button id="mainConnectedBtn" data-modal-target="disconnect-modal"
-                    data-modal-toggle="disconnect-modal"
-                    class="-bg-[red] cursor-pointer w-full h-fit rounded-[6px] border border-white py-3 px-8 gap-3 bg-[#DBEFCC] text-[#4BAE00] font-medium hidden items-center justify-center ">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M3.75 10.95L9.9375 17.25L20.25 6.75" stroke="currentColor" stroke-width="1.5"
-                        stroke-linecap="square" stroke-linejoin="round" />
-                    </svg>
-                    Connected
-                  </button>
-                </div>
-
-              </div>
-            </div>
+            <img class="w-[312px] h-[312px]" src="./user-photo2.png" alt="user photo">
             <div class="-bg-[orange] w-full h-fit flex justify-between">
               <div class="-bg-[red] w-fit h-fit flex flex-col gap-4 ">
                 <div class="-bg-[pink] text-[#470001] text-[40px]">
@@ -316,7 +253,64 @@
             </div>
           </div>
           <div class="-bg-[pink] w-full h-fit">
+            <div class="-bg-[red] w-[312px] h-fit flex flex-col gap-6 mt-7">
+              <div class="-bg-[blue] w-full h-fit gap-2 justify-between flex items-center relative">
+                <div class="w-fit h-fit gap-2 flex items-center">
+                  <a href=""
+                    class="w-fit h-fit rounded-full border border-[#CFD8C1] p-1.5 hover:bg-[#878F7A] flex items-center justify-center text-[#454545] hover:text-white z-3">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <g clip-path="url(#clip0_2492_6547)">
+                        <path
+                          d="M11.6668 4.3335H11.6735M4.66683 1.3335H11.3335C13.1744 1.3335 14.6668 2.82588 14.6668 4.66683V11.3335C14.6668 13.1744 13.1744 14.6668 11.3335 14.6668H4.66683C2.82588 14.6668 1.3335 13.1744 1.3335 11.3335V4.66683C1.3335 2.82588 2.82588 1.3335 4.66683 1.3335ZM10.6668 7.58016C10.7491 8.13499 10.6543 8.70164 10.396 9.19951C10.1377 9.69737 9.72893 10.1011 9.22791 10.3533C8.7269 10.6055 8.15913 10.6932 7.60535 10.6041C7.05158 10.515 6.54 10.2536 6.14339 9.85694C5.74677 9.46032 5.48532 8.94875 5.39621 8.39497C5.3071 7.8412 5.39487 7.27343 5.64705 6.77241C5.89922 6.2714 6.30295 5.86266 6.80082 5.60432C7.29868 5.34599 7.86533 5.25122 8.42016 5.3335C8.98611 5.41742 9.51006 5.68114 9.91462 6.0857C10.3192 6.49026 10.5829 7.01421 10.6668 7.58016Z"
+                          stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                      </g>
+                      <defs>
+                        <clipPath id="clip0_2492_6547">
+                          <rect width="16" height="16" fill="white" />
+                        </clipPath>
+                      </defs>
+                    </svg>
+                  </a>
 
+                  <a href=""
+                    class="w-fit h-fit rounded-full border border-[#CFD8C1] p-1.5 hover:bg-[#878F7A] flex items-center justify-center text-[#454545] hover:text-white z-3">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M2.75 3.5322C2.75 3.17865 2.86825 2.88699 3.10473 2.6572C3.34121 2.4274 3.64865 2.3125 4.02703 2.3125C4.39865 2.3125 4.69932 2.42562 4.92905 2.65189C5.16554 2.88523 5.28378 3.18926 5.28378 3.56402C5.28378 3.90341 5.16892 4.18623 4.93919 4.4125C4.70271 4.64583 4.39189 4.7625 4.00676 4.7625H3.99662C3.625 4.7625 3.32433 4.64583 3.09459 4.4125C2.86486 4.17917 2.75 3.88573 2.75 3.5322ZM2.88176 12.8125V5.72765H5.13176V12.8125H2.88176ZM6.37838 12.8125H8.62838V8.85644C8.62838 8.60896 8.65541 8.41805 8.70946 8.28371C8.80405 8.0433 8.94763 7.84002 9.1402 7.67386C9.33277 7.5077 9.57432 7.42462 9.86486 7.42462C10.6216 7.42462 11 7.95846 11 9.02614V12.8125H13.25V8.75038C13.25 7.70391 13.0135 6.91023 12.5405 6.36932C12.0676 5.82841 11.4426 5.55795 10.6655 5.55795C9.79392 5.55795 9.11486 5.95038 8.62838 6.73523V6.75644H8.61824L8.62838 6.73523V5.72765H6.37838C6.39189 5.95391 6.39865 6.65744 6.39865 7.83826C6.39865 9.01906 6.39189 10.6771 6.37838 12.8125Z"
+                        fill="currentColor" />
+                    </svg>
+                  </a>
+                  <button data-modal-target="share-profile-modal" data-modal-toggle="share-profile-modal"
+                    class="cursor-pointer w-fit h-fit rounded-full border border-[#CFD8C1] p-1.5 hover:bg-[#878F7A] flex items-center justify-center text-[#454545] hover:text-white z-3">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M5.22667 9.00634L9.78 11.6597M9.77333 4.33967L5.22667 6.99301M13.5 3.33301C13.5 4.43758 12.6046 5.33301 11.5 5.33301C10.3954 5.33301 9.5 4.43758 9.5 3.33301C9.5 2.22844 10.3954 1.33301 11.5 1.33301C12.6046 1.33301 13.5 2.22844 13.5 3.33301ZM5.5 7.99967C5.5 9.10424 4.60457 9.99967 3.5 9.99967C2.39543 9.99967 1.5 9.10424 1.5 7.99967C1.5 6.8951 2.39543 5.99967 3.5 5.99967C4.60457 5.99967 5.5 6.8951 5.5 7.99967ZM13.5 12.6663C13.5 13.7709 12.6046 14.6663 11.5 14.6663C10.3954 14.6663 9.5 13.7709 9.5 12.6663C9.5 11.5618 10.3954 10.6663 11.5 10.6663C12.6046 10.6663 13.5 11.5618 13.5 12.6663Z"
+                        stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                  </button>
+                </div>
+                <div class="-bg-[green] text-[#737373] w-fit h-fit gap-x-2 flex items-center">
+                  Connections:
+                  <div class=" text-black">
+                    28
+                  </div>
+                </div>
+              </div>
+              <div class="w-full h-fit">
+                <button id="mainConnectBtn" data-modal-target="connect-modal" data-modal-toggle="connect-modal"
+                  class="-bg-[red] cursor-pointer w-full h-fit rounded-[6px] border border-white py-3 px-8 bg-[#960D0D] text-white font-medium block">
+                  Connect
+                </button>
+                <button id="mainConnectedBtn" data-modal-target="disconnect-modal" data-modal-toggle="disconnect-modal"
+                  class="-bg-[red] cursor-pointer w-full h-fit rounded-[6px] border border-white py-3 px-8 gap-3 bg-[#DBEFCC] text-[#4BAE00] font-medium hidden items-center justify-center ">
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M3.75 10.95L9.9375 17.25L20.25 6.75" stroke="currentColor" stroke-width="1.5"
+                      stroke-linecap="square" stroke-linejoin="round" />
+                  </svg>
+                  Connected
+                </button>
+              </div>
+            </div>
           </div>
         </div>
       </section>
