--- a/root/task-3/flowbite_html_project/src/index_1.html
+++ b/root/task-3/flowbite_html_project/src/index_1.html
@@ -212,9 +212,9 @@
             class="-bg-[blue] w-full h-fit mt-[12px] w825:mt-[48px] relative flex flex-col w825:flex-row gap-12 w825:justify-between">
 
             <!-- <img class="w-[312px] h-[312px]" src="./user-photo.png" alt="user photo"> -->
-            <div class="-bg-[green] w-full w825:w-fit h-fit flex w825:flex-col justify-between">
-              <img class="w-[312px]" src="./user-photo.png" alt="user photo">
-              <div id="swap1_n1" class="-bg-[red] w-[312px] h-fit flex flex-col gap-6 mt-7">
+            <div class="bg-[green] w-full w825:w-fit h-fit gap-7 flex w825:flex-col justify-between">
+              <img class="min-w-[168px] max-w-[312px]" src="./user-photo.png" alt="user photo">
+              <div id="swap1_n1" class="-bg-[red] w-[312px] h-fit flex flex-col gap-6">
                 <div class="-bg-[blue] w-full h-fit gap-2 justify-between flex items-center relative">
                   <div class="w-fit h-fit gap-2 flex items-center">
                     <div
@@ -299,11 +299,11 @@
               </div>
             </div>
             <div class="-bg-[orange] w-full h-fit ">
-              <div id="swap1_n2" class="w-fit h-fit flex flex-col gap-4">
+              <div id="swap1_n2" class="bg-[red] min-w-[150px] w-fit h-fit flex flex-col justify-center gap-4">
                 <div class="-bg-[pink] text-[#470001] text-[40px]">
                   Diana Fleming
                 </div>
-                <div class="-bg-[purple] w-fit h-fit text-[16px] flex gap-2">
+                <div class="-bg-[purple] w-full h-full text-[16px] flex gap-2">
                   <span class="text-[#454545] font-medium">
                     Product Manager
                   </span>
