--- a/root/task-3/flowbite_html_project/src/index_3.html
+++ b/root/task-3/flowbite_html_project/src/index_3.html
@@ -44,7 +44,7 @@
   <header class="z-40 bg-[#F8EFE8] text-black w-full h-fit fixed">
     <nav class="w-full h-fit flex justify-center">
       <div
-        class="w-full max-w-[1440px] h-fit border-b py-4 px-12 gap-4 bg-[#F8EFE8] border-[#4700011A] flex items-center justify-between">
+        class="w-full max-w-[1440px] h-fit border-b py-4 px-6 w825:px-12 gap-4 bg-[#F8EFE8] border-[#4700011A] flex items-center justify-between">
         <a href="#" class="text-[#470001]">
           <svg width="88" height="24" viewBox="0 0 88 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
@@ -164,7 +164,8 @@
       </div>
     </nav>
   </header>
-  <main class="z-2 bg-[white] text-black w-full max-w-[1440px] h-fit mt-[72px] px-12 flex flex-col items-center">
+  <main
+    class="z-2 bg-[white] text-black w-full max-w-[1440px] h-fit mt-[72px] px-6 w825:px-12 flex flex-col items-center">
     <div class="-bg-[yellow] w-full h-fit mx-auto">
       <h1 class="-bg-[red] w-fit h-fit mt-[44px] text-[40px] text-[#470001]  flex items-center ">
         My responses
