--- a/root/task-3/flowbite_html_project/src/index_1.html
+++ b/root/task-3/flowbite_html_project/src/index_1.html
@@ -303,16 +303,18 @@
                 <div class="-bg-[pink] text-[#470001] text-[40px]">
                   Diana Fleming
                 </div>
-                <div class="-bg-[purple] w-full h-full text-[16px] flex gap-2">
+                <div class="-bg-[purple] w-full h-full text-[16px] flex w825:flex-row gap-2">
                   <span class="text-[#454545] font-medium">
                     Product Manager
                   </span>
-                  <span class="text-[#737373] font-medium">
-                    at
-                  </span>
-                  <span class="text-[#454545] font-semibold">
-                    LoftView
-                  </span>
+                  <div class="bg-[blue]">
+                    <span class="text-[#737373] font-medium">
+                      at
+                    </span>
+                    <span class="text-[#454545] font-semibold">
+                      LoftView
+                    </span>
+                  </div>
                 </div>
               </div>
 
