--- a/root/task-3/flowbite_html_project/src/index_1.html
+++ b/root/task-3/flowbite_html_project/src/index_1.html
@@ -399,7 +399,7 @@
         <div id="default-tab-content">
           <div class="hidden overflow-y-scroll w-full h-fit max-h-[320px] scrollbar-hide" id="active" role="tabpanel"
             aria-labelledby="active-tab">
-            <!-- you should choose of the below available divs based on screen width.  -->
+            <!-- you should choose one from the below available divs based on screen width.  -->
             <!-- desktop component -->
             <div id=""
               class="-bg-[red] w-full h-fit border-b py-[11px] w825:px-[16px] text-[#E8E8E8] flex items-center justify-center">
@@ -746,7 +746,7 @@
           </div>
           <div class="hidden overflow-y-scroll w-full h-fit max-h-[320px] scrollbar-hide" id="archived" role="tabpanel"
             aria-labelledby="archived-tab">
-            <!-- you should choose of the below available divs based on screen width.  -->
+            <!-- you should choose one from the below available divs based on screen width.  -->
             <!-- desktop component -->
             <div id=""
               class="-bg-[red] w-full h-fit border-b py-[11px] w825:px-[16px] text-[#E8E8E8] flex items-center justify-center">
