--- a/root/task-3/flowbite_html_project/src/index_1.html
+++ b/root/task-3/flowbite_html_project/src/index_1.html
@@ -721,13 +721,13 @@
             <div
               class="-bg-[red] w-full h-fit border-b border-[#E8E8E8] py-[11px] px-[16px] gap-x-2 flex items-center justify-center">
               <div class="-bg-[orange] w-full h-fit text-black flex items-center justify-between">
-                <div class="bg-[red] w-full h-fit gap-x-8 flex items-center">
+                <div class="-bg-[red] w-full h-fit gap-x-8 flex items-center">
                   <img class="w-12 h-12 rounded-full" src="/docs/images/people/profile-picture-5.jpg"
                     alt="Rounded avatar">
                   <div class="-bg-[blue] w-fit h-fit gap-2 flex flex-col leading-[150%] tracking-[-1%]">
                     <!-- increase the w-[increase] to increase truncation width else do w-[decrease] -->
                     <div class="-bg-[green] w-[208px] h-fit font-medium truncate max-w-full whitespace-nowrap">
-                      KURIO name sdsddsdsdsdsdsdsdsdsdsdsdsdsdsds
+                      KURIO name desktop component
                     </div>
                     <p class="-bg-[lightgreen] w-[100px] h-fit truncate max-w-full whitespace-nowrap">
                       Description Description Description Description Description Description
@@ -746,13 +746,13 @@
             <div
               class="-bg-[red] w-full h-fit border-b border-[#E8E8E8] py-[11px] px-[16px] gap-x-2 flex items-center justify-center">
               <div class="-bg-[orange] w-full h-fit text-black gap-3 flex flex-col justify-between">
-                <div class="bg-[red] w-full h-fit gap-x-3 flex items-center">
+                <div class="-bg-[red] w-full h-fit gap-x-3 flex items-center">
                   <img class="w-12 h-12 rounded-full" src="/docs/images/people/profile-picture-5.jpg"
                     alt="Rounded avatar">
                   <div class="-bg-[blue] w-fit h-fit gap-[2px] flex flex-col leading-[150%] tracking-[-1%]">
                     <!-- increase the w-[increase] to increase truncation width else do w-[decrease] -->
                     <div class="-bg-[green] w-[208px] h-fit font-medium truncate max-w-full whitespace-nowrap">
-                      KURIO name sdsddsdsdsdsdsdsdsdsdsdsdsdsdsds
+                      KURIO name mobile component
                     </div>
                     <p class="-bg-[lightgreen] w-[100px] h-fit truncate max-w-full whitespace-nowrap">
                       Description Description Description Description Description Description
