--- a/root/task-3/flowbite_html_project/src/index_2.html
+++ b/root/task-3/flowbite_html_project/src/index_2.html
@@ -6,8 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Flowbite HTML Project</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-  <!-- <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" /> -->
-  <!-- <link href="./globals.css" rel="stylesheet"> -->
   <style type="text/tailwindcss">
     @theme inline{
       --breakpoint-w1140: 1140px;
@@ -26,7 +24,6 @@
     .scrollbar-hide::-webkit-scrollbar {
       display: none;
     }
-
     /* Hide scrollbar for IE, Edge and Firefox */
     .scrollbar-hide {
       -ms-overflow-style: none;
@@ -40,7 +37,7 @@
 
 
 <body class="-bg-[black] w-full flex flex-col items-center">
-  <header class="z-40 bg-[#F8EFE8] text-black w-full h-fit fixed">
+  <header id="nav-container" class="z-40 bg-[#F8EFE8] text-black w-full h-fit fixed">
     <nav class="w-full h-fit flex justify-center">
       <div
         class="w-full max-w-[1440px] h-fit border-b py-4 px-6 w825:px-12 gap-4 bg-[#F8EFE8] border-[#4700011A] flex items-center justify-between">
@@ -117,7 +114,7 @@
               <button data-dropdown-toggle="profile-DropDown"
                 class="cursor-pointer w-fit h-fit gap-3 flex items-center">
                 <div class="w-[40px] h-[40px]">
-                  <img class="w-full h-full rounded-full" src="./user-photo.png" alt="Rounded avatar">
+                  <img class="w-full h-full rounded-full" src="images/user-photo.png" alt="Rounded avatar">
                 </div>
                 <div class="hidden w1000:block w-fit h-fit">
                   <div
@@ -163,6 +160,7 @@
       </div>
     </nav>
   </header>
+
   <main
     class="z-2 bg-[white] text-black w-full max-w-[1440px] h-fit mt-[72px] px-6 w825:px-12 flex flex-col items-center">
 
@@ -271,10 +269,10 @@
       <div class="w-fit h-fit gap-[40px] mt-[16px] flex items-center">
         <div class="w-fit h-fit gap-4 flex items-center">
           <div class="bg-[red] w-[80px] h-[80px] rounded-sm">
-            <img class="" src="/docs/images/people/profile-picture-5.jpg" alt="">
+            <img class="" src="" alt="">
           </div>
           <div class="bg-[red] w-[80px] h-[80px] rounded-sm">
-            <img class="" src="/docs/images/people/profile-picture-5.jpg" alt="">
+            <img class="" src="" alt="">
           </div>
           <!-- image 2 and so on one by one with div here -->
         </div>
@@ -365,7 +363,7 @@
         <div
           class="-bg-[red] w-full h-fit rounded-lg border border-[#E8E8E8] py-[16px] px-[24px] gap-x-10 flex items-center justify-center">
           <div class="-bg-[blue] w-full h-fit gap-8 flex items-center">
-            <img class="w-12 h-12 rounded-full" src="./user-photo.png" alt="Rounded avatar">
+            <img class="w-12 h-12 rounded-full" src="images/user-photo.png" alt="Rounded avatar">
             <div class="-bg-[blue] w-full h-fit gap-2 flex flex-col leading-[150%] tracking-[-1%]">
               <!-- increase the w-[increase] to increase truncation width else do w-[decrease] -->
               <div class="-bg-[green] w-[208px] h-[50%] font-medium truncate max-w-full whitespace-nowrap">
